--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
+    def coordinatorlayout_version = "1.1.0"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:$coordinatorlayout_version"
+    implementation 'com.google.android.material:material:1.0.0'
 }
